# home_work_27_

./: manage.py  pyproject.toml
ads/: apps.py  models.py  views.py
ads/data/: convert.py
ads/migrations/: 0001_initial.py
home_work_27/: asgi.py  settings.py  urls.py  wsgi.py
